Fix truncation

--- a/hackerstash/static/scss/pages/_leaderboard.scss
+++ b/hackerstash/static/scss/pages/_leaderboard.scss
@@ -11,6 +11,11 @@
     }
   }
 
+  .table .table-body li p:last-of-type {
+    overflow: visible;
+    text-overflow: clip;
+  }
+
   .score {
     color: $mauve-1000;
   }
